ui: fix players photo size in the tooltips on Safari

--- a/ui/analyse/css/study/relay/_player-tip.scss
+++ b/ui/analyse/css/study/relay/_player-tip.scss
@@ -23,7 +23,7 @@
 
     .fide-players__photo {
       width: 150px;
-      height: fit-content;
+      height: auto;
     }
 
     &__info {
